--- a/contactos.html
+++ b/contactos.html
@@ -22,7 +22,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
         <div class="container px-5">
-            <img class="navbar-brand logo" onclick="topFunction()" href="#top" src="imgs/logodeloitte.svg" alt="..." />
+            <img class="navbar-brand logo" onclick="topFunction()" href="#top" href="#top" src="imgs/logodeloitte.svg" alt="..." />
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto" style="margin-top: 0px">
@@ -42,6 +42,7 @@
     <header class="masthead text-center text-white">
         <div class="masthead-content">
             <div class="container px-5">
+                <img class=" img-fluid rounded-circle" style="width: 25rem; margin-top: 0px;" src="imgs/02.png">
                 <h1 class="masthead-heading mb-0">Programa BrightStart</h1>
                 <h2 class="masthead-subheading mb-0">Descobre como contactar os politécnicos aderentes!</h2>
                 <!--<a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Learn More</a>-->
@@ -57,7 +58,7 @@
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
-                        <h2  style="font-size: 30px;"> <a href="https://www.ips.pt/ips_si/web_page.inicial"> Instituto Politécnico de Setúbal </a> </h2>
+                        <h2  style="font-size: 30px; text-decoration: none"> <a href="https://www.ips.pt/ips_si/web_page.inicial"> Instituto Politécnico de Setúbal </a> </h2>
                         <p class="paragraphs">brightstart@deloitte.pt<br>210 422 932</p>
                     </div>
                 </div>
@@ -73,7 +74,7 @@
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
-                        <h2  style="font-size: 30px;"> <a href="https://www.ipv.pt/"> Instituto Politécnico de Viseu </a> </h2>
+                        <h2  style="font-size: 30px; text-decoration: none"> <a href="https://www.ipv.pt/"> Instituto Politécnico de Viseu </a> </h2>
                         <p class="paragraphs">brightstartIPV@deloitte.pt<br>210 422 934</p>
                     </div>
                 </div>
@@ -89,7 +90,7 @@
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
-                        <h5 style="font-size: 30px;"> <a href="https://www.ipleiria.pt/"> Instituto Politécnico de Leiria </a> </h5>
+                        <h5 style="font-size: 30px; text-decoration: none;"> <a href="https://www.ipleiria.pt/"> Instituto Politécnico de Leiria </a> </h5>
                         <p class="paragraphs">brightstartIPL@deloitte.pt<br>210 422 935
                         </p>
                     </div>
@@ -99,9 +100,7 @@
     </section>
     <!-- Footer-->
 
-    <footer class="footer-distributed">
-
-
+    <footer class="footer-distributed" style="font-family: Catamaran;">
         <div class="footer-left"> 
                 <h3>Bright<span>Start</span></h3>
                 <p class="footer-company-name">Deloitte</p>
