--- a/inscricao.html
+++ b/inscricao.html
@@ -39,6 +39,7 @@
     <header class="masthead text-center text-white">
         <div class="masthead-content">
             <div class="container px-5">
+                <img class=" img-fluid rounded-circle" style="width: 25rem; margin-top: 0px;" src="imgs/02.png">
                 <h1 class="masthead-heading mb-0">Programa BrightStart</h1>
                 <h2 class="masthead-subheading mb-0">Já decidiste que te queres inscrever? Fá-lo aqui!</h2>
                 <!--<a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Learn More</a>-->
@@ -50,8 +51,8 @@
         <label for="inputReason">Razão de contacto</label>
         <select class="custom-select custom-select-sm">
             <option selected value="Ins">Inscrição</option>
-            <option value="Duv">Dúvidas</option>
-            <option value="Sug">Sugestão</option>
+            <!-- <option value="Duv">Dúvidas</option>-->
+            <!-- <option value="Sug">Sugestão</option>-->
         </select>
 
         <div class="form-group">
@@ -79,6 +80,7 @@
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
+
     <!-- Footer-->
     
     <footer class="footer-distributed">
