--- a/sobre.html
+++ b/sobre.html
@@ -42,6 +42,7 @@
     <header class="masthead text-center text-white">
         <div class="masthead-content">
             <div class="container px-5">
+                <img class=" img-fluid rounded-circle" style="width: 25rem; margin-top: 0px;" src="imgs/02.png">
                 <h1 class="masthead-heading mb-0">Programa BrightStart</h1>
                 <h2 class="masthead-subheading mb-0">Tens curiosidade? Consulta as informações abaixo!</h2>
                 <!--<a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Learn More</a>-->
