--- a/testemunho.html
+++ b/testemunho.html
@@ -42,6 +42,7 @@
     <header class="masthead text-center text-white">
         <div class="masthead-content">
             <div class="container px-5">
+                <img class=" img-fluid rounded-circle" style="width: 25rem; margin-top: 0px;" src="imgs/02.png">
                 <h1 class="masthead-heading mb-0">Programa BrightStart</h1>
                 <h2 class="masthead-subheading mb-0">Queres ler opiniões de colegas de BrightStart? Vê abaixo!</h2>
                 <!--<a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Learn More</a>-->
@@ -59,6 +60,7 @@
                     <div class="p-5">
                         <h2 class="display-4">João Godinho</h2>
                         <p class="paragraphs">"Com o programa BrightStart consegui adquirir múltiplos conhecimentos e aplicar os mesmos num ambiente real de trabalho."</p>
+                        <p class="paragraphs">João, Ex-Aluno do IPV em EI e possui também um Mestrado em Engenharia Informática, participou no curso BrightStart durante 5 anos e ainda trabalhou na Delloite por outros 3.</p>
                     </div>
                 </div>
             </div>
@@ -75,6 +77,7 @@
                     <div class="p-5">
                         <h2 class="display-4">Jorge Miguel</h2>
                         <p class="paragraphs">"Após a conclusão do programa BrightStart, o mercado de trabalho tornou-se mais amplo devido às ferramentas que adquiri no programa e ao enriquecimento do meu CV, dado os anos de experiência numa empresa como a Delloite."</p>
+                        <p class="paragraphs">Jorge, começou por estudar Relações Públicas mas depois de ver as oportunidades oferecidas pelo BrightStart decidiu aventurar-se no mundo da informática, acabou o curso e trabalhou na Deloitte 7 anos antes de partir para a Microsoft.</p>
                     </div>
                 </div>
             </div>
@@ -91,6 +94,7 @@
                     <div class="p-5">
                         <h2 class="display-4">Archie Longman</h2>
                         <p class="paragraphs">"Um dos aspetos que mais apreciei neste programa, foi a interação professor-aluno, assim como a interação com os membros da Delloite, sendo que estas sempre foram úteis e agradáveis."</p>
+                        <p class="paragraphs">Archie, nascido na Escócia decidiu vir estudar para Portugal no IPS e ao saber do programa Brightstart decidiu inscrever-se, depois do curso decidiu voltar para a Escócia para trabalhar na Deloitte lá.</p>
                     </div>
                 </div>
             </div>
