Deloitte é com 2 t's não 2 l's

--- a/testemunho.html
+++ b/testemunho.html
@@ -60,7 +60,7 @@
                     <div class="p-5">
                         <h2 class="display-4">João Godinho</h2>
                         <p class="paragraphs">"Com o programa BrightStart consegui adquirir múltiplos conhecimentos e aplicar os mesmos num ambiente real de trabalho."</p>
-                        <p class="paragraphs">João, Ex-Aluno do IPV em EI e possui também um Mestrado em Engenharia Informática, participou no curso BrightStart durante 5 anos e ainda trabalhou na Delloite por outros 3.</p>
+                        <p class="paragraphs">João, Ex-Aluno do IPV em EI e possui também um Mestrado em Engenharia Informática, participou no curso BrightStart durante 5 anos e ainda trabalhou na Deloitte por outros 3.</p>
                     </div>
                 </div>
             </div>
