O formulário agora tá fixe

--- a/contactos.html
+++ b/contactos.html
@@ -42,9 +42,9 @@
     <header class="masthead text-center text-white">
         <div class="masthead-content">
             <div class="container px-5">
-                <img class=" img-fluid rounded-circle" style="width: 25rem; margin-top: 0px;" src="imgs/02.png">
-                <h1 class="masthead-heading mb-0">Programa BrightStart</h1>
-                <h2 class="masthead-subheading mb-0">Descobre como contactar os politécnicos aderentes!</h2>
+                <img class=" img-fluid rounded-circle" style="width: 25rem; margin-top: 0px; float: left;" src="imgs/02.png">
+                <h1 class="masthead-heading mb-0" style="float: right;">Programa BrightStart</h1>
+                <h2 class="masthead-subheading mb-0" style="float: right;">Descobre como contactar os politécnicos aderentes!</h2>
                 <!--<a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Learn More</a>-->
             </div>
         </div>
@@ -58,7 +58,7 @@
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
-                        <h2  style="font-size: 30px; text-decoration: none"> <a href="https://www.ips.pt/ips_si/web_page.inicial"> Instituto Politécnico de Setúbal </a> </h2>
+                        <h2 style="font-size: 30px; text-decoration: none"> <a href="https://www.ips.pt/ips_si/web_page.inicial"> Instituto Politécnico de Setúbal </a> </h2>
                         <p class="paragraphs">brightstart@deloitte.pt<br>210 422 932</p>
                     </div>
                 </div>
@@ -74,7 +74,7 @@
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
-                        <h2  style="font-size: 30px; text-decoration: none"> <a href="https://www.ipv.pt/"> Instituto Politécnico de Viseu </a> </h2>
+                        <h2 style="font-size: 30px; text-decoration: none"> <a href="https://www.ipv.pt/"> Instituto Politécnico de Viseu </a> </h2>
                         <p class="paragraphs">brightstartIPV@deloitte.pt<br>210 422 934</p>
                     </div>
                 </div>
@@ -86,7 +86,7 @@
         <div class="container px-5">
             <div class="row gx-5 align-items-center">
                 <div class="col-lg-6 order-lg-2">
-                    <div class="p-5"><img class="img-fluid rounded-circle" src="imgs/ipl-2.png" alt="..."/></div>
+                    <div class="p-5"><img class="img-fluid rounded-circle" src="imgs/ipl-2.png" alt="..." /></div>
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
@@ -101,31 +101,30 @@
     <!-- Footer-->
 
     <footer class="footer-distributed" style="font-family: Catamaran;">
-        <div class="footer-left"> 
-                <h3>Bright<span>Start</span></h3>
-                <p class="footer-company-name">Deloitte</p>
-            </div>
+        <div class="footer-left">
+            <h3>Bright<span>Start</span></h3>
+            <p class="footer-company-name">Deloitte</p>
+        </div>
 
-            <div class="footer-center">
-                
-                <p class="footer-links">
-                    <a style="color: white;" href="Home.html">Home</a> 
-                    <br> <a href="Home.html">Contactos</a>
-                    <br> <a style="color: white;" href="Home.html">Sobre</a> 
-                    <br> <a style="color: white;"href="Home.html">Inscrição</a> 
-                    <br> <a style="color: white;" href="Home.html">Testemunhos</a>
-                </p>
-            </div>
+        <div class="footer-center">
 
-            <div class="footer-right">
+            <p class="footer-links">
+                <a style="color: white;" href="Home.html">Home</a>
+                <br> <a href="Home.html">Contactos</a>
+                <br> <a style="color: white;" href="Home.html">Sobre</a>
+                <br> <a style="color: white;" href="Home.html">Inscrição</a>
+                <br> <a style="color: white;" href="Home.html">Testemunhos</a>
+            </p>
+        </div>
 
-                <p class="footer-company-about">
-                    <span>Mais Informações</span>
-                    A Deloitte abrange ao Programa BrightStart com oferta de bolsas de estudo e propinas na área tecnológica!
-                </p>
+        <div class="footer-right">
+
+            <p class="footer-company-about">
+                <span>Mais Informações</span> A Deloitte abrange ao Programa BrightStart com oferta de bolsas de estudo e propinas na área tecnológica!
+            </p>
 
 
-            </div>
+        </div>
 </body>
 
 </html>
