--- a/home.html
+++ b/home.html
@@ -19,9 +19,10 @@
 <body id="page-top">
     <!-- Navigation-->
 
+
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
         <div class="container px-5">
-            <img class="navbar-brand logo" onclick="topFunction()" href="#top" src="imgs/logodeloitte.svg" alt="..." />
+            <img class="logobarra" src="imgs/logodeloittehome.svg"/>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto" style="margin-top: 0px">
@@ -38,10 +39,9 @@
 
     <header class="masthead text-center text-white">
         <div class="masthead-content">
-            <div class="container px-5">
-                <img class=" img-fluid rounded-circle" style="width: 25rem; margin-top: 0px; float: left;" src="imgs/02.png">
-                <h1 class="masthead-heading mb-0" style="float: right;">Programa BrightStart</h1>
-                <h2 class="masthead-subheading mb-0" style="float: right;">O futuro pode ser brilhante</h2>
+                <img style="width: 25rem;" src="imgs/02.png">
+                <h1 class="masthead-heading mb-0">Programa BrightStart</h1>
+                <h2 class="masthead-subheading mb-0">O futuro pode ser brilhante</h2>
                 <!--<a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Learn More</a>-->
             </div>
         </div>
@@ -64,11 +64,12 @@
             </div>
         </div>
     </section>
-    </a>
+</a>
 
 
     <!-- Content section 2-->
     <section>
+        <header class="masthead text-center text-white">
         <div class="container px-5">
             <div class="row gx-5 align-items-center">
                 <div class="col-lg-6">
@@ -82,6 +83,7 @@
                 </div>
             </div>
         </div>
+    </header>
     </section>
 
 
