--- a/sobre.html
+++ b/sobre.html
@@ -22,11 +22,11 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
         <div class="container px-5">
-            <img class="navbar-brand logo" onclick="topFunction()" href="#page-top" src="imgs/logodeloitte.svg" alt="..." />
+            <img class="logobarra" src="imgs/logodeloittehome.svg"/>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto" style="margin-top: 0px">
-                    <li class="nav-item"><a class="nav-link" href="home.html">Início</a></li>
+                    <li class="nav-item active"><a class="nav-link active" href="home.html">Início</a></li>
                     <li class="nav-item"><a class="nav-link" href="contactos.html">Contactos</a></li>
                     <li class="nav-item"><a class="nav-link" href="sobre.html" style="color: #75B625;">Sobre</a></li>
                     <li class="nav-item"><a class="nav-link" href="inscricao.html">Inscrição</a></li>
@@ -41,15 +41,12 @@
     <!-- Header-->
     <header class="masthead text-center text-white">
         <div class="masthead-content">
-            <div class="container px-5">
-                <img class=" img-fluid rounded-circle" style="width: 25rem; margin-top: 0px; float: left;" src="imgs/02.png">
-                <h1 class="masthead-heading mb-0" style="float: right;">Programa BrightStart</h1>
-                <h2 class="masthead-subheading mb-0" style="float: right;">Tens curiosidade? Consulta as informações abaixo!</h2>
+            <h1 class="masthead-heading mb-0">Sobre</h1>
+                <h2 class="masthead-subheading mb-0">Tens curiosidade? Consulta as informações abaixo!</h2>
                 <!--<a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Learn More</a>-->
             </div>
         </div>
     </header>
-
     <!-- Content section 1-->
     <section id="scroll">
         <div class="container px-5">
@@ -70,6 +67,7 @@
             </div>
         </div>
     </section>
+
 
     <footer class="footer-distributed">
 
