--- a/testemunho.html
+++ b/testemunho.html
@@ -22,7 +22,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
         <div class="container px-5">
-            <img class="navbar-brand logo" onclick="topFunction()" href="#page-top" src="imgs/logodeloitte.svg" alt="..." />
+            <img class="logobarra" src="imgs/logodeloittehome.svg"/>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto" style="margin-top: 0px">
@@ -41,14 +41,13 @@
     <!-- Header-->
     <header class="masthead text-center text-white">
         <div class="masthead-content">
-            <div class="container px-5">
-                <img class=" img-fluid rounded-circle" style="width: 25rem; margin-top: 0px; float: left;" src="imgs/02.png">
-                <h1 class="masthead-heading mb-0" style="float: right;">Programa BrightStart</h1>
-                <h2 class="masthead-subheading mb-0" style="float: right;">Queres ler opiniões de colegas de BrightStart? Vê abaixo!</h2>
+                <h1 class="masthead-heading mb-0">Testemunhos</h1>
+                <h2 class="masthead-subheading mb-0">Queres ler opiniões de colegas de BrightStart? Vê abaixo!</h2>
                 <!--<a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Learn More</a>-->
             </div>
         </div>
     </header>
+
     <!-- Content section 1-->
     <section id="scroll">
         <div class="container px-5">
@@ -68,6 +67,7 @@
     </section>
     <!-- Content section 2-->
     <section>
+        <header class="masthead text-center text-white">
         <div class="container px-5">
             <div class="row gx-5 align-items-center">
                 <div class="col-lg-6">
@@ -82,6 +82,7 @@
                 </div>
             </div>
         </div>
+        </header>
     </section>
     <!-- Content section 3-->
     <section>
