--- a/inscricao.html
+++ b/inscricao.html
@@ -23,7 +23,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
         <div class="container px-5">
-            <img class="navbar-brand logo" onclick="topFunction()" href="#page-top" src="imgs/logodeloitte.svg" alt="..." />
+            <img class="logobarra" src="imgs/logodeloittehome.svg"/>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto" style="margin-top: 0px">
@@ -39,16 +39,14 @@
     <!-- Header-->
     <header class="masthead text-center text-white">
         <div class="masthead-content">
-            <div class="container px-5">
-                <img class=" img-fluid rounded-circle" style="width: 25rem; margin-top: 0px; float: left;" src="imgs/02.png" onclick="teste()">
-                <h1 class="masthead-heading mb-0" style="float: right;">Programa BrightStart</h1>
-                <h2 class="masthead-subheading mb-0" style="float: right;">Já decidiste que te queres inscrever? Fá-lo aqui!</h2>
+                <h1 class="masthead-heading mb-0">Inscrição</h1>
+                <h2 class="masthead-subheading mb-0">Já decidiste que te queres inscrever? Fá-lo aqui!</h2>
                 <!--<a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Learn More</a>-->
             </div>
         </div>
     </header>
-    <!-- Content section 1-->
-    <form class="form">
+      <!-- Content section 1-->
+      <form class="form">
         <label for="inputReason">Razão de contacto</label>
         <select id="dropdown" class="custom-select custom-select-sm" onchange="mostrar()">
             <option selected value="Ins" >Inscrição</option>
