--- a/home.html
+++ b/home.html
@@ -37,14 +37,21 @@
     </nav>
 
 
+  
     <header class="masthead text-center text-white">
         <div class="masthead-content">
-                <img style="width: 25rem;" src="imgs/02.png">
-                <h1 class="masthead-heading mb-0">Programa BrightStart</h1>
-                <h2 class="masthead-subheading mb-0">O futuro pode ser brilhante</h2>
-                <!--<a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Learn More</a>-->
+                <img style="width: 25rem; margin-right: 40%;" src="imgs/02.png">
             </div>
         </div>
+
+        <div id="Subtitulo1">
+            <span style="font-weight:bold"> O futuro pode ser brilhante! </span> 
+        </div>
+
+        <div id="Subtitulo2">
+            <span> Agarra a tua oportunidade!  </span>
+        </div>
+
     </header>
 
     <!-- Content section 1-->
