--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
         <div class="container px-5">
-            <img class="logobarra" src="imgs/logodeloittehome.svg"/>
+            <img class="logobarra" src="imgs/logodeloittehome.svg" />
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto" style="margin-top: 0px">
@@ -37,15 +37,15 @@
     </nav>
 
 
-  
+
     <header class="masthead text-center text-white">
         <div class="masthead-content">
-                <img style="width: 25rem; margin-right: 40%;" src="imgs/02.png">
-            </div>
+            <img style="width: 25rem; margin-right: 40%;" src="imgs/02.png">
+        </div>
         </div>
 
         <div id="Subtitulo1">
-            <span style="font-weight:bold"> O futuro pode ser brilhante! </span> 
+            <span style="font-weight:bold"> O futuro pode ser brilhante! </span>
         </div>
 
         <div id="Subtitulo2">
@@ -71,26 +71,26 @@
             </div>
         </div>
     </section>
-</a>
+    </a>
 
 
     <!-- Content section 2-->
     <section>
         <header class="masthead text-center text-white">
-        <div class="container px-5">
-            <div class="row gx-5 align-items-center">
-                <div class="col-lg-6">
-                    <div class="p-5"><img class="img-fluid rounded-circle" style="width: 80%;" src="imgs/02.png" alt="..." /></div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="p-5">
-                        <h2 class="display-4">Onde podes, começar a tua carreira?</h2>
-                        <p>O Programa BrightStart atualmente está presente no Instituto Politécnico de Setúbal, Politécnico de Leiria e Politécnico de Viseu.</p>
+            <div class="container px-5">
+                <div class="row gx-5 align-items-center">
+                    <div class="col-lg-6">
+                        <div class="p-5"><img class="img-fluid rounded-circle" style="width: 80%;padding-right: 1.5rem;" src="imgs/02.png" alt="..." /></div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="p-5">
+                            <h2 class="display-4">Onde podes, começar a tua carreira?</h2>
+                            <p>O Programa BrightStart atualmente está presente no Instituto Politécnico de Setúbal, Politécnico de Leiria e Politécnico de Viseu.</p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </header>
+        </header>
     </section>
 
 
