--- a/inscricao.html
+++ b/inscricao.html
@@ -23,7 +23,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
         <div class="container px-5">
-            <img class="logobarra" src="imgs/logodeloittehome.svg"/>
+            <img class="logobarra" src="imgs/logodeloittehome.svg" />
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto" style="margin-top: 0px">
@@ -39,14 +39,14 @@
     <!-- Header-->
     <header class="masthead text-center text-white">
         <div class="masthead-content">
-                <h1 class="masthead-heading mb-0">Inscrição</h1>
-                <h2 class="masthead-subheading mb-0">Já decidiste que te queres inscrever? Fá-lo aqui!</h2>
-                <!--<a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Learn More</a>-->
-            </div>
+            <h1 class="masthead-heading mb-0">Inscrição</h1>
+            <h2 class="masthead-subheading mb-0">Já decidiste que te queres inscrever? Fá-lo aqui!</h2>
+            <!--<a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Learn More</a>-->
+        </div>
         </div>
     </header>
-      <!-- Content section 1-->
-      <form class="form">
+    <!-- Content section 1-->
+    <form class="form">
         <label for="inputReason">Razão de contacto</label>
         <select id="dropdown" class="custom-select custom-select-sm" onchange="mostrar()">
             <option selected value="Ins" >Inscrição</option>
@@ -65,12 +65,12 @@
             <input type="text" class="form-control" id="inputSurname" aria-describedby="emailHelp" placeholder="Inserir Último Nome">
         </div>
 
-        <div class="form-group" id="divTest3">
+        <div class="form-group">
             <label for="inputEmail">Email</label>
             <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" placeholder="Inserir Email">
         </div>
 
-        <div class="form-group" id="divTest4">
+        <div class="form-group" id="divTest3">
             <label for="inputCity">Cidade</label>
             <input type="text" class="form-control" id="inputCity" aria-describedby="emailHelp" placeholder="Inserir Cidade">
         </div>
@@ -82,34 +82,16 @@
     </form>
 
     <!-- Footer-->
+    <div class="footer-center">
 
-    <footer class="footer-distributed">
-
-
-        <div class="footer-left">
-            <h3>Bright<span>Start</span></h3>
-            <p class="footer-company-name">Deloitte</p>
-        </div>
-
-        <div class="footer-center">
-
-            <p class="footer-links">
-                <a style="color: white;" href="Home.html">Home</a>
-                <br> <a style="color: white;" href="Home.html">Contactos</a>
-                <br> <a style="color: white;" href="Home.html">Sobre</a>
-                <br> <a href="Home.html">Inscrição</a>
-                <br> <a style="color: white;" href="Home.html">Testemunhos</a>
-            </p>
-        </div>
-
-        <div class="footer-right">
-
-            <p class="footer-company-about">
-                <span>Mais Informações</span> A Deloitte abrange ao Programa BrightStart com oferta de bolsas de estudo e propinas na área tecnológica!
-            </p>
-
-
-        </div>
+        <p class="footer-links">
+            <a style="color: white;" href="Home.html">Home</a>
+            <br> <a style="color: white;" href="Home.html">Contactos</a>
+            <br> <a style="color: white;" href="Home.html">Sobre</a>
+            <br> <a href="Home.html">Inscrição</a>
+            <br> <a style="color: white;" href="Home.html">Testemunhos</a>
+        </p>
+    </div>
 </body>
 
 </html>
