--- a/contactos.html
+++ b/contactos.html
@@ -84,7 +84,7 @@
     </main>
     <!-- Footer-->
 
-    <footer class="footer-distributed" style="font-family: Catamaran;">
+    <footer class="footer-distributed">
         <div class="footer-left">
             <h3>Bright<span>Start</span></h3>
             <p class="footer-company-name">Deloitte</p>
@@ -93,8 +93,8 @@
         <div class="footer-center">
 
             <p class="footer-links">
-                <a style="color: white;" href="Home.html">Home</a>
-                <br> <a href="Home.html">Contactos</a>
+                <a href="Home.html">Home</a>
+                <br> <a style="color: white;" href="Home.html">Contactos</a>
                 <br> <a style="color: white;" href="Home.html">Sobre</a>
                 <br> <a style="color: white;" href="Home.html">Inscrição</a>
                 <br> <a style="color: white;" href="Home.html">Testemunhos</a>
@@ -109,6 +109,7 @@
 
 
         </div>
+
 </body>
 
 </html>
