--- a/sobre.html
+++ b/sobre.html
@@ -68,16 +68,33 @@
         </div>
     </section>
 
-    <div class="footer-center">
 
-        <p class="footer-links">
-            <a style="color: white;" href="Home.html">Home</a>
-            <br> <a style="color: white;" href="Home.html">Contactos</a>
-            <br> <a href="Home.html">Sobre</a>
-            <br> <a style="color: white;" href="Home.html">Inscrição</a>
-            <br> <a style="color: white;" href="Home.html">Testemunhos</a>
-        </p>
-    </div>
+    <footer class="footer-distributed">
+        <div class="footer-left">
+            <h3>Bright<span>Start</span></h3>
+            <p class="footer-company-name">Deloitte</p>
+        </div>
+
+        <div class="footer-center">
+
+            <p class="footer-links">
+                <a href="Home.html">Home</a>
+                <br> <a style="color: white;" href="Home.html">Contactos</a>
+                <br> <a style="color: white;" href="Home.html">Sobre</a>
+                <br> <a style="color: white;" href="Home.html">Inscrição</a>
+                <br> <a style="color: white;" href="Home.html">Testemunhos</a>
+            </p>
+        </div>
+
+        <div class="footer-right">
+
+            <p class="footer-company-about">
+                <span>Mais Informações</span> A Deloitte abrange ao Programa BrightStart com oferta de bolsas de estudo e propinas na área tecnológica!
+            </p>
+
+
+        </div>
+
 </body>
 
 </html>
